--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,21 +2,26 @@
 
 S3method(checkFamily,brmsfit)
 S3method(checkFamily,gam)
+S3method(checkFamily,gamm)
 S3method(checkFamily,matrix)
 S3method(checkModel,brmsfit)
 S3method(checkModel,gam)
+S3method(checkModel,gamm)
 S3method(checkModel,matrix)
 S3method(checkNewdata,brmsfit)
 S3method(checkNewdata,gam)
+S3method(checkNewdata,gamm)
 S3method(checkNewdata,matrix)
 S3method(getExtractor,brmsfit)
 S3method(getExtractor,gam)
+S3method(getExtractor,gamm)
 S3method(getExtractor,matrix)
 S3method(getMu,brmsfit)
 S3method(getMu,gam.extractor)
 S3method(getMu,matrix)
 S3method(getSampOptions,brmsfit)
 S3method(getSampOptions,gam)
+S3method(getSampOptions,gamm)
 S3method(getSampOptions,matrix)
 export(index)
 importFrom(Rcpp,sourceCpp)
